# robo_trader

./: Cargo.toml
src/: main.rs  model.rs  services.rs
src/helper/: api_constants.rs
src/model/: http.rs  user_auth_cred.rs  user_auth_token.rs
src/model/http/: params.rs  resp.rs
src/services/: auth.rs  stock.rs
